k8s/base-infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: falcon
