k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: falcon-gateway
  namespace: falcon
spec:
  replicas: 2
  selector:
    matchLabels:
      app: falcon-gateway
  template:
    metadata:
      labels:
        app: falcon-gateway
    spec:
      containers:
      - name: falcon-gateway
        image: falcon-gateway:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: falcon-gateway
  namespace: falcon
spec:
  type: LoadBalancer
  selector:
    app: falcon-gateway
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
